@@ -13,7 +13,8 @@
 * Fix UnicodeEncodeError on terminals that don't (or don't claim to)
   support UTF-8.
 * Importing without autotagging ("beet import -A") is now faster and
-  doesn't print out a bunch of whitespace.
+  doesn't print out a bunch of whitespace. It also lets you specify
+  single files on the command line (rather than just directories).
 * The importer now logs an error instead of crashing when it attempts
   to read a corrupt file.
 
